edited tests