@@ -57,7 +57,7 @@ public class CharacterModel extends Element {
 
     public void updateKittyPosition(Position newPosition) {
         if (kittyLastPositions.size() >= 10) {
-            kittyLastPositions.removeFirst();
+            kittyLastPositions.remove(0);
         }
         kittyLastPositions.add(newPosition);
     }
